# CGame

./: .gitignore  CMakeLists.txt
src/: cell.cpp  cell.hpp  client.cpp  enum.hpp  map.cpp  map.hpp  server.cpp  snake.cpp  snake.hpp  window.cpp  window.hpp
